PoC for Spring Boot 3 Migration
Signed-off-by: Thomas Darimont <thomas.darimont@oidf.org>